# pair-programming-with-fastapi

./: .gitignore  README.md  logs.db  main.py  pyproject.toml
app/logs/: repository.py  router.py  schema.py  service.py
core/: database.py  models.py
scripts/: format.sh
